# Poltergeist

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Folder.DotSettings  Poltergeist.sln  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cmake.yml  test.yml
Poltergeist/: Poltergeist.csproj  Program.cs
Poltergeist.Core/: CheatCheck.cs  ExitHandler.cs  MathUtils.cs  NativeArray.cs  Poltergeist.Core.csproj
Poltergeist.Core.Tests/: AssertUtils.cs  CoTaskMemoryAllocatorTests.cs  EnumUtilsTests.cs  EnumerableUtilsTests.cs  NativeArrayPoolTests.cs  NativeArrayTests.cs  NativeListTests.cs  NativeStructTests.cs  PointerUtilsTest.cs  PointerUtilsTests.cs  Poltergeist.Core.Tests.csproj  StringExtensionsTests.cs
Poltergeist.Core/Bindings/Glfw/: GlfwArg.cs  GlfwDefinition.cs  GlfwError.cs  GlfwHint.cs  GlfwInput.cs  GlfwNative.cs
Poltergeist.Core/Bindings/Glfw/Callbacks/: GlfwWindowCloseFun.cs  GlfwWindowPosFun.cs  GlfwWindowRefreshFun.cs  GlfwWindowSizeFun.cs
Poltergeist.Core/Bindings/Glfw/Enums/: GlfwArg.cs  GlfwCursorShape.cs  GlfwCursorState.cs  GlfwError.cs  GlfwEvent.cs  GlfwHint.cs  GlfwInput.cs  GlfwInputMode.cs  GlfwInputState.cs  GlfwKeyMode.cs  GlfwKeyboard.cs  GlfwMouse.cs  GlfwProfile.cs
Poltergeist.Core/Bindings/Glfw/Macros/: GlfwHint.cs  GlfwKeyboard.cs  GlfwMouse.cs
Poltergeist.Core/Bindings/Glfw/Structures/: GlfwCursor.cs  GlfwGamepadState.cs  GlfwGammaRamp.cs  GlfwImage.cs  GlfwMonitor.cs  GlfwVidMode.cs  GlfwVideoMode.cs  GlfwWindow.cs
Poltergeist.Core/Bindings/OpenGl/: OpenGl1Native.cs  OpenGl2Native.cs  OpenGl3Native.cs  OpenGlBufferType.cs  OpenGlClearMask.cs  OpenGlError.cs  OpenGlNative.cs  OpenGlParameter.cs  OpenGlPrimitive.cs  OpenGlShaderType.cs  OpenGlTextureFormat.cs  OpenGlTextureParameter.cs  OpenGlTextureParameterValue.cs  OpenGlTextureType.cs  OpenGlType.cs  OpenGlTypeUtils.cs  OpenGlUsageHint.cs
Poltergeist.Core/Collections/: EnumerableUtils.cs
Poltergeist.Core/Extensions/: StringExtensions.cs
Poltergeist.Core/IO/: BetterConsole.cs
Poltergeist.Core/Math/: EnumUtils.cs  MathUtils.cs  Vector2.cs  Vector2Int.cs  Vector3.cs  Vector3Int.cs  Vector4.cs  Vector4Int.cs
Poltergeist.Core/Memory/: CoTaskMemAllocator.cs  INativeAllocator.cs  NativeArray.cs  NativeArrayPool.cs  NativeList.cs  NativeStruct.cs  PointerUtils.cs
Poltergeist.Core/Rendering/: IndexBuffer.cs  Shader.cs  Texture.cs  VertexArray.cs  VertexBuffer.cs  VertexBufferElement.cs
Poltergeist.Core/Windowing/: Window.cs
Poltergeist.Editor/: Poltergeist.Editor.csproj  Program.cs
Poltergeist.Sandbox/: Poltergeist.Sandbox.csproj  Program.cs  core.frag  core.vert
PoltergeistEditor/: CMakeLists.txt  vcpkg.json
PoltergeistEditor/include/: ImGUIContent.h  ImGUIContent.hpp
PoltergeistEditor/src/: ImGUIContent.cpp  PoltergeistEditor.cpp
PoltergeistEngine/: CMakeLists.txt  vcpkg.json
PoltergeistEngine/include/: FileUtilities.hpp  Image.hpp  IndexBuffer.hpp  OpenGlUtilities.hpp  Renderer.hpp  Shader.hpp  ShaderStage.hpp  ShaderStageType.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VertexBufferLayoutElement.hpp
PoltergeistEngine/include/PoltergeistEngine/: GameObject.hpp  Macros.hpp  Scene.hpp
PoltergeistEngine/include/PoltergeistEngine/Components/: TagComponent.hpp  TransformComponent.hpp
PoltergeistEngine/include/PoltergeistEngine/Encoding/: EncodingUtilities.hpp
PoltergeistEngine/include/PoltergeistEngine/Image/: Image.hpp  ImageLoader.hpp  JpegImage.hpp  PngImage.hpp
PoltergeistEngine/include/PoltergeistEngine/Rendering/: FrameBuffer.hpp  IndexBuffer.hpp  OpenGlUtilities.hpp  Renderer.hpp  Shader.hpp  ShaderStage.hpp  ShaderStageType.hpp  Texture.hpp  Vertex.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VertexBufferLayoutElement.hpp
PoltergeistEngine/shaders/: core.frag  core.vert
PoltergeistEngine/src/: EncodingUtilities.cpp  FileUtilities.cpp  Image.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderStage.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
PoltergeistEngine/src/PoltergeistEngine/: GameObject.cpp  Scene.cpp
PoltergeistEngine/src/PoltergeistEngine/Encoding/: EncodingUtilities.cpp
PoltergeistEngine/src/PoltergeistEngine/IO/: FileUtilities.cpp
PoltergeistEngine/src/PoltergeistEngine/Image/: Image.cpp  ImageLoader.cpp  JpegImage.cpp  PngImage.cpp
PoltergeistEngine/src/PoltergeistEngine/Rendering/: FrameBuffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderStage.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
PoltergeistSandbox/: CMakeLists.txt  vcpkg.json
PoltergeistSandbox/src/: PoltergeistSandbox.cpp
