add_executable(PoltergeistEditor src/PoltergeistEditor.cpp)
target_include_directories(PoltergeistEditor PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
target_link_libraries(PoltergeistEditor PUBLIC Poltergeist::PoltergeistEngine PRIVATE glfw glad::glad)
add_executable(Poltergeist::PoltergeistEditor ALIAS PoltergeistEditor)
