add_executable(PoltergeistEditor src/PoltergeistEditor.cpp)
target_include_directories(PoltergeistEditor PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
target_link_libraries(PoltergeistEditor PUBLIC Poltergeist::PoltergeistEngine PRIVATE glfw glad::glad imgui::imgui)
add_executable(Poltergeist::PoltergeistEditor ALIAS PoltergeistEditor)
add_custom_target(copy-shaders-to-editor ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/PoltergeistEngine/shaders ${CMAKE_CURRENT_BINARY_DIR})
add_custom_target(copy-resources-to-editor ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/PoltergeistEngine/resources ${CMAKE_CURRENT_BINARY_DIR})
add_dependencies(PoltergeistEditor copy-shaders-to-editor copy-resources-to-editor)
